[gd_scene load_steps=7 format=3 uid="uid://dutjtyluty2rm"]

[ext_resource type="Script" path="res://Scripts/ui & inventory/inventory_slot_display.gd" id="1_nt8kr"]
[ext_resource type="Texture2D" uid="uid://b5vdpkmm5tsna" path="res://Art/UI/hotbar highlight.png" id="3_bco0e"]
[ext_resource type="PackedScene" uid="uid://dj4uo1mrdxxha" path="res://Scenes/shadow_sprite.tscn" id="4_23v32"]
[ext_resource type="Texture2D" uid="uid://bpp02gt4ei5wv" path="res://Art/shadow spill cover.png" id="4_qb2jg"]
[ext_resource type="FontFile" uid="uid://c2it3k3fijg8r" path="res://Fonts/stardew numbers font.png" id="6_qchqo"]

[sub_resource type="FontVariation" id="FontVariation_cmbv1"]
base_font = ExtResource("6_qchqo")
spacing_glyph = -1

[node name="InventorySlotDisplay" type="CenterContainer"]
custom_minimum_size = Vector2(18, 18)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -302.0
offset_bottom = -162.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
script = ExtResource("1_nt8kr")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
action_mode = 0

[node name="Highlight" type="Sprite2D" parent="."]
texture = ExtResource("3_bco0e")
centered = false
offset = Vector2(-3, -4)

[node name="ShadowSprite" parent="." instance=ExtResource("4_23v32")]
vframes = 5

[node name="ShadowSpillCover" type="Sprite2D" parent="ShadowSprite"]
texture = ExtResource("4_qb2jg")
centered = false
offset = Vector2(-3, -4)

[node name="ItemAmountLabel" type="Label" parent="ShadowSprite"]
unique_name_in_owner = true
offset_left = 6.0
offset_top = 12.0
offset_right = 19.0
offset_bottom = 22.0
theme_override_fonts/font = SubResource("FontVariation_cmbv1")
text = "999"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = -12
theme_override_constants/margin_top = -17

[node name="HotkeyLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_qchqo")
text = ";"

[connection signal="pressed" from="Button" to="." method="_on_clicked"]
